<resources>
    <string name="app_name">FBUApp</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="current_location">Current Location</string>
    <string name="log_out">Log Out</string>
    <string name="api_key">AIzaSyCoN3IkXspHi5ECM5gARwI9C6jlAIGhRTw</string>
    <string name="empty_string" />
    <string name="missing_field">Missing fields!</string>
    <string name="zoom_key">kELCxDTHRq3YQj3nDuWt9W0gi9kPeeo9tkyv</string>
    <string name="zoom_secret_key">Ogqb5PEMFQhzIvL0BQGGPSjv9Y0Sc7Bg8Mtj</string>
    <string name="maps_api_key">AIzaSyC0zdpoE05GkuXJRDYztxvFBOG-H7kO8Xo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="join_meeting">join meeting</string>
    <string name="in_person">In-Person</string>
    <string name="zoom">zoom.us</string>
    <string name="create_group">Create Group</string>
    <string name="meeting_location">Meeting Location</string>
    <string name="enter_study_topics_min_3">Enter study topics (min. 3)</string>
    <string name="additional_topics_class_names_i_e_chem101">Additional topics/class names (i.e. CHEM101)</string>
    <string name="create_your_group_below">Create your group below</string>
    <string name="school">School</string>
    <string name="group_name">Group Name</string>
    <string name="jwt_token">eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOm51bGwsImlzcyI6IkVYNFhyU1JkVFRxODdna2h6R2hCN3ciLCJleHAiOjE2NjM3NzY3MjAsImlhdCI6MTYyNjU0OTU4Mn0.75GQtzra3VKKfp5-tpkn54kQ0Hzeydkp4Gdd_mTPg3c</string>
    <string name="endPoint">https://api.zoom.us/v2/users/anushkamehta311@gmail.com/meetings</string>
    <string name="zoom_JWT_key">EX4XrSRdTTq87gkhzGhB7w</string>
    <string name="zoom_JWT_secret_key">qwoZeALzrTvGaoTAGXnvi1lu1zdeHCIqdZa2</string>
    <string name="hello">hello</string>
    <string name="virtual">Virtual</string>
    <string name="title_group_type">Select group type preference...</string>
    <string name="title_study_topics">Topics I wish to study...</string>
    <string name="join">Join</string>
    <string name="members">members</string>
    <string name="vg">Virtual Group</string>
    <string name="meetingID">\"meetingID: \"</string>
    <string name="small">Small (less than 10)</string>
    <string name="large">Large (20 or more)</string>
    <string name="avg">Average (10-20)</string>
    <string name="miles">\" miles from you\"</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="code_path">com.codepath.fileprovider</string>
    <string name="youtube_api_key">AIzaSyBeQA1ThnPsxaT9ByS_uO97VpZcSS5CRP8</string>
    <string name="miles_from_user"> miles from you</string>
    <string name="prior">prior</string>
    <string name="ongoing">ongoing</string>
    <string name="finished">finished</string>
    <string name="ongoing_capital">ONGOING</string>
    <string name="expired">EXPIRED</string>

    <string-array name="topics_array">
        <item>Accounting</item>
        <item>Business law</item>
        <item>Business management</item>
        <item>Consumer education</item>
        <item>Entrepreneurship</item>
        <item>Business</item>
        <item>Marketing</item>
        <item>Finance</item>
        <item>Animation</item>
        <item>App Development</item>
        <item>Computer Science</item>
        <item>Computer Hardware</item>
        <item>Film Production</item>
        <item>Graphic Design</item>
        <item>Keyboarding</item>
        <item>Media Technology</item>
        <item>Programming</item>
        <item>Computer Engineering</item>
        <item>Music</item>
        <item>Video Game Design</item>
        <item>Web Development</item>
        <item>American Literature</item>
        <item>British Literature</item>
        <item>Contemporary literature</item>
        <item>Creative writing</item>
        <item>Communication skills</item>
        <item>Debate</item>
        <item>English language and composition</item>
        <item>Humanities</item>
        <item>Journalism</item>
        <item>Poetry</item>
        <item>Rhetoric</item>
        <item>Shakespeare</item>
        <item>Technical writing</item>
        <item>Written and oral communication</item>
        <item>World literature</item>
        <item>Chemistry of foods</item>
        <item>CPR training</item>
        <item>Culinary arts</item>
        <item>Fashion and retail merchandising</item>
        <item>Fashion construction</item>
        <item>Nutrition</item>
        <item>American Sign Language</item>
        <item>Ancient Greek</item>
        <item>Arabic</item>
        <item>Chinese</item>
        <item>French</item>
        <item>German</item>
        <item>Hebrew</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Latin</item>
        <item>Spanish</item>
        <item>Algebra</item>
        <item>Calculus</item>
        <item>Computer math</item>
        <item>Geometry</item>
        <item>Integrated math</item>
        <item>Multivariable calculus</item>
        <item>Statistics</item>
        <item>Trigonometry</item>
        <item>Probability</item>
        <item>Choir</item>
        <item>Dance</item>
        <item>Gymnastics</item>
        <item>Health</item>
        <item>Agriculture</item>
        <item>Astronomy</item>
        <item>Biology</item>
        <item>Botany</item>
        <item>Chemistry</item>
        <item>Earth science</item>
        <item>Electronics</item>
        <item>Environmental science</item>
        <item>Environmental studies</item>
        <item>Forensic science</item>
        <item>Geology</item>
        <item>Marine biology</item>
        <item>Aerospace Engineering</item>
        <item>Oceanography</item>
        <item>Physical science</item>
        <item>Physics</item>
        <item>Zoology</item>
        <item>Cultural anthropology</item>
        <item>Current events</item>
        <item>European history</item>
        <item>Geography</item>
        <item>Global studies</item>
        <item>Human geography</item>
        <item>International relations</item>
        <item>Law</item>
        <item>Macroeconomics</item>
        <item>Microeconomics</item>
        <item>Modern world studies</item>
        <item>Physical anthropology</item>
        <item>Political studies</item>
        <item>Psychology</item>
        <item>Religious studies</item>
        <item>Sociology</item>
        <item>US government</item>
        <item>US history</item>
        <item>Women’s studies</item>
        <item>World history</item>
        <item>World politics</item>
        <item>World religions</item>
        <item>Drawing</item>
        <item>Photography</item>
        <item>Art</item>
        <item>Printmaking</item>
        <item>Sculpture</item>
        <item>Research</item>
        <item>Art History</item>
        <item>Music Theory</item>
        <item>Aerospace Engineering</item>
        <item>Aeronautical</item>
        <item>Agriculture Engineering</item>
        <item>Biomedical Engineering</item>
        <item>Biochemical Engineering</item>
        <item>Electrical Engineering</item>
        <item>Engineering</item>
        <item>Computer Software</item>
        <item>Choir</item>
        <item>Accounting Technician</item>
        <item>Business Administration and Management, General</item>
        <item>Hotel/Motel Management</item>
        <item>Human Resources Development/Training</item>
        <item>Human Resources Management</item>
        <item>International Business Management</item>
        <item>Labor/Industrial Relations</item>
    </string-array>

    <string-array name="preferences_array">
        <item>Quiet group</item>
        <item>Highly collaborative</item>
        <item>Moderately collaborative</item>
        <item>Regular meetings</item>
        <item>Independent</item>
        <item>Frequent meetings</item>
        <item>Discussion based</item>
        <item>Resource sharing based</item>
        <item>Active group</item>
        <item>Basic level</item>
        <item>Intermediate level</item>
        <item>Advanced topics</item>
        <item>Active group</item>
        <item>Visual learning style</item>
        <item>Active engagement</item>
    </string-array>

    <string-array name="group_size">
        <item>Auto</item>
        <item>Large (20 or more)</item>
        <item>Small (less than 10)</item>
        <item>Average (10-20)</item>
    </string-array>

    <plurals name="memberTest">
        <item quantity="one">member</item>
        <item quantity="other">members</item>
    </plurals>

    <plurals name="milesTest">
        <item quantity="one">mile from you</item>
        <item quantity="other">mile from you</item>
    </plurals>
    <string name="title_activity_maps">Map</string>
    <string name="link_description">Link description</string>
    <string name="paste_link_here">Paste link here...</string>
    <string name="add_a_new_link">Add a new link</string>
    <string name="ok">OK</string>
    <string name="decline_group_invite">Decline group invite</string>
    <string name="don_t_want_to_join_this_group">Don\'t want to join this group?</string>
    <string name="accept">Accept Group Invite</string>
    <string name="group_notes">Group Notes</string>
    <string name="zoom_meeting">Zoom Meeting</string>
    <string name="added_by">Added by @</string>
    <string name="group_joined">Group joined</string>
    <string name="undo">Undo</string>
    <string name="invite_declined">Group invite declined</string>
    <string name="joined">Joined</string>
    <string name="add_a_new_note">Add a new note</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="missing_fields">Missing fields</string>
    <string name="settings">Settings</string>
    <string name="change_group_photo">Change group photo</string>
    <string name="all">All</string>
    <string name="change_image">Change Profile Photo</string>
    <string name="location">Location</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="university">University</string>

</resources>
